--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -13,5 +13,5 @@
 		</tr>
 		
 	</table>
-	<%= button_to t('.checkout'), new_order_path, method: :get %>
+	<%= button_to t('.checkout'), new_order_path, method: :get %><hr/>
 	<%= button_to t('.empty'), @cart, method: :delete, data: { confim: "Are you sure?" } %>
