--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
 		<%= select_tag 'set_locale', options_for_select(LANGUAGES, I18n.locale.to_s), onchange: 'this.form.submit()'%>
 		<%= submit_tag 'submit' %>
 		<%= javascript_tag "$('.locale input').hide()" %>
-	<% end %>
-	<%= image_tag("ruby.png") %>
+	<% end %>	
 	<%= @page_title || t('.title') %>
 </div>
 <div id="columns">
@@ -25,13 +24,6 @@
 		<% end %>
 		<% end %>
 		</div>
-			
-		<ul>
-			<li> <%= link_to t('.home'), store_path %> </li>
-			<li> <a href="http://www..../faq"> <%= t('.questions') %> </a> </li>
-			<li> <a href="http://www..../news"> <%= t('.news') %> </a> </li>
-			<li> <a href="http://www..../contact"> <%= t('.contact') %> </a> </li>
-		</ul>
 
 		<% if session[:user_id] %>
 			<ul>
@@ -39,12 +31,26 @@
 				<li> <%= link_to 'Products', products_path %> </li>
 				<li> <%= link_to 'Users', users_path %> </li>
 			</ul>
+				<li><hr></li>
 				<%= button_to "Logout", logout_path, method: :delete %>
+		<% else %>
+			<ul>
+			<li> <%= link_to t('.home'), store_path %> </li>
+			<li> <a href="#"> <%= t('.questions') %> </a> </li>
+			<li> <a href="#"> <%= t('.news') %> </a> </li>
+			<li> <a href="#"> <%= t('.contact') %> </a> </li>
+			<li><hr></li>
+			<%= button_to "Login", login_path %>
+			</ul>
+
 		<% end %>
 	</div>
 	<div id="main">
 		<%= yield %>
 	</div>
+</div>
+<div id="footer">
+	<p>&copy; 2017</p>
 </div>
 
 </body>
