--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,10 +14,9 @@
           </dl>       
         </td>
 
-        <td class="list_action">
-          <%= link_to 'Show', product %><br />
-          <%= link_to 'Edit', edit_product_path(product) %><br />
-          <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <td class="list_action"><%= link_to 'Show', product %></td>
+        <td class="list_action"><%= link_to 'Edit', edit_product_path(product) %></td>
+        <td class="list_action"><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </td>
       </tr>
   <% end %>
