--- a/app/views/order_notifier/shipped.text.erb
+++ b/app/views/order_notifier/shipped.text.erb
@@ -1,3 +1,13 @@
-OrderNotifier#shipped
+<h3> Pragmatic Order Shipped </h3>
 
-<%= @greeting %>, find me in app/views/order_notifier/shipped.text.erb
+<p>
+  This is just let you know that we've shipped your recent order:
+</p>
+
+<table>
+	<tr>
+		<th colspan="2"> Qty </th>
+		<th> Description </th>
+	</tr>
+	<%= render @order.line_items -%>
+</table>
