--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -10,24 +10,30 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :name, t('.name') %><br>
-    <%= f.text_field :name, size: 40 %>
-  </div>
-  <div class="field">
-    <%= f.label :address, t('.address_html') %><br>
-    <%= f.text_area :address, rows: 4, cols: 40 %>
-  </div>
-  <div class="field">
-    <%= f.label :email, t('.email') %><br>
-    <%= f.text_field :email, size: 40 %>
-  </div>
-  <div class="field">
-    <%= f.label :pay_type, t('.pay_type') %><br>
-    <%= f.select :pay_type, Order::PAYMENT_TYPES, prompt: t('.pay_prompt_html') %>
-  </div>
-  <div class="actions">
-    <%= f.submit t('.submit') %>
-  </div>
+  <table>
+    <tbody>
+      <tr>
+        <td><%= f.label :name, t('.name') %></td>
+        <td><%= f.text_field :name, size: 40 %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :address, t('.address_html') %></td>
+        <td><%= f.text_area :address, rows: 4, cols: 40 %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :email, t('.email') %></td>
+        <td><%= f.text_field :email, size: 40 %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :pay_type, t('.pay_type') %></td>
+        <td>
+            <%= f.select :pay_type, Order::PAYMENT_TYPES, prompt: t('.pay_prompt_html') %>
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><%= f.submit t('.submit') %></td>
+      </tr>
+    </tbody>
+  </table>
 <% end %>
