--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -8,8 +8,8 @@
 		margin: 0;
 		padding-bottom: 0.5em;
 		font: 150% sans-serif;
-		color: #226;
-		border-bottom: 3px dotted #77d;
+		color: black;
+		border-bottom: 3px dotted black;
 	}
 
 	.entry {
@@ -31,7 +31,7 @@
 			margin-left: 100px;
 			margin-top: 0;
 			margin-bottom: 2px;
-			color: #227; 
+			color: black; 
 		}
 
 		p, div.price_line {
@@ -45,7 +45,7 @@
 		}
 
 		.price {
-			color: #44a;
+			color: black;
 			font-weight: bold;
 			margin-right: 3em
 		}
