--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,5 @@
-<h1> Welcome </h1>
-It's <%= Time.now %>
-We have <%= pluralize(@total_order, 'Order') %>.
-<p>Find me in app/views/admin/index.html.erb</p>
+<% provide(:title, "Admin") %>
+<h1> Welcome <%= User.first.name %> </h1>
+<h2>It's <%= Time.now %></h2>
+<h3>We have <stong style="color:red;"><%= pluralize(@total_order, 'Order') %></stong>.</h3>
+
