--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Catalog")%>
 <% if notice %>
 	<p id="notice"><%= notice %></p>
 <% end %>
@@ -10,7 +11,7 @@
 				<h3> <%= product.title %> </h3>
 				<p> <%= sanitize(product.description) %> </p>
 				<div class="price_line">
-					<span class="price"> Rp.<%= product.price %> </span>
+					<span class="price"> Rp.<%= number_with_delimiter(product.price) %> </span>
 					<%= button_to t('.add_html'), line_items_path(product_id: product), remote: true %>
 				</div>
 			</div>
