--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Admin") %>
-<h1> Welcome <%= User.first.name %> </h1>
-<h2>It's <%= Time.now %></h2>
+<h1> Welcome <%= current_user.name %> </h1>
+<h2>It's <%= (Time.now).strftime("%A, %d %B %Y %I:%M%p") %></h2>
 <h3>We have <stong style="color:red;"><%= pluralize(@total_order, 'Order') %></stong>.</h3>
 
