--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -9,7 +9,7 @@
 
 		<tr class="total_line">
 			<td colspan="2"> Total </td>
-			<td class="total_cell"> Rp.<%= @cart.total_price %> </td>		
+			<td class="total_cell">Rp <%= number_with_delimiter(@cart.total_price) %> </td>		
 		</tr>
 		
 	</table>
