--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+<div class="container-fluid">
 <body class="<%= controller.controller_name %>">
 <div id="banner">
 	<%= form_tag store_path, class: 'locale' do %>
@@ -56,4 +57,5 @@
 </div>
 
 </body>
+</div>
 </html>
