--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,7 @@
 #banner {
 	background: #fff;
 	padding: 10px;
+	padding-bottom: 30px;
 	border-bottom: 2px solid black;
 	font: small-caps 40px/40px "Times New Roman", serif;
 	text-align: left;
@@ -27,7 +28,7 @@
 	.locale {
 		float: right;
 		margin: -0.25em 0.1em;
-		display: inline;
+		display: inline-block;
 		
 		select {
 			width: 100px;
@@ -36,8 +37,6 @@
 		}
 
 		p {
-			padding-right: 20px;
-			padding-top: 20px;
 			color: black;
 
 			a:hover {
@@ -46,14 +45,15 @@
 		}
 	}
 
-	h1 {
+	h3 {
 		color: #FF0011;
+		font-weight: bold;
 	}
 	
 	img {
 		float: left;
-		width: 50px;
-		height: 50px;
+		width: 100px;
+		height: 80px;
 		padding-right: 15px;
 	}
 }
