--- a/app/views/order_notifier/received.text.erb
+++ b/app/views/order_notifier/received.text.erb
@@ -1,9 +1,16 @@
 Dear <%= @order.name %>
 
-Thank you for your recent order from The Pragmatic Store.
+Thank you for your recent order from AB OnlineShop.
 
 You ordered the following items:
 
 <%= render @order.line_items -%>
+Go-Jek shipping Rp 15.000
+Total : Rp <%= number_with_delimiter(@order.final_price_with_gojek_shipping_cost) %>
 
+Our Account bank :
+BNI 034 281 1454 A/N Musa Abdillah
+MANDIRI 139 00 1686 5366 A/N Musa Abdillah
+We wait your payment until <%= (24.hours.from_now).strftime("%A, %d %B %Y at %I:%M%p") %>
 We'll send you a separate e-mail when your order ships.
+Thank you for your order!
