--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Products</h1>
 
-<table>
+<table class="table table-bordered">
   <% @products.each do |product| %>
       <tr class="<%= cycle('list_line_odd', 'list_line_even')%>">
         <td> <%= image_tag(product.image_url, class: 'list_image') %></td>
@@ -10,13 +10,13 @@
         <td class="list_description">
           <dl>
             <dt> <%= product.title %> </dt>
-            <dd> <%= truncate(strip_tags(product.description), length: 8) %> </dd>
+            <dd> <%= (product.description).truncate_words(10) %> </dd>
           </dl>       
         </td>
 
-        <td class="list_action"><%= link_to 'Show', product %></td>
-        <td class="list_action"><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td class="list_action"><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="list_action"><%= link_to 'Show', product, class: "btn btn-info" %></td>
+        <td class="list_action"><%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning" %></td>
+        <td class="list_action"><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
         </td>
       </tr>
   <% end %>
