--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -10,26 +10,30 @@
       </ul>
     </div>
   <% end %>
-
-      <div class="form-group">
-        <%= f.label :name, t('.name') %>
-        <%= f.text_field :name, size: 40 %>
-      </div>
-      <div class="form-group">
-        <%= f.label :address, t('.address_html') %>
-        <%= f.text_area :address, rows: 4, cols: 40 %>
-      </div>
-      <div class="form-group">
-        <%= f.label :email, t('.email') %>
-        <%= f.text_field :email, size: 40 %>
-      </div>
-      <div class="form-group">
-        <%= f.label :pay_type, t('.pay_type') %>
-        <%= f.select :pay_type, Order::PAYMENT_TYPES, prompt: t('.pay_prompt_html') %>
-      </div>
-      <div>
-        <%= f.submit t('.submit'), class: "btn btn-success" %>
-      </div>
-    </tbody>
-  </table>
+<table class="table table-stripped">
+  <tr>
+    <td> <%= f.label :name, t('.name') %> </td>
+    <td> <%= f.text_field :name, size: 40 %> </td>
+  </tr>
+  <tr>
+    <td> <%= f.label :phone_number, t('.phone') %> </td>
+    <td> <%= f.text_field :phone, size: 40 %> </td>
+  </tr>
+  <tr>
+    <td> <%= f.label :address, t('.address_html') %> </td>
+    <td> <%= f.text_area :address, rows: 4, cols: 40 %> </td>
+  </tr>
+  <tr>
+    <td> <%= f.label :email, t('.email') %> </td>
+    <td> <%= f.text_field :email, size: 40 %> </td>
+  </tr>
+  <tr>
+    <td> <%= f.label :pay_type, t('.pay_type') %> </td>
+    <td> <%= f.select :pay_type, Order::PAYMENT_TYPES, prompt: t('.pay_prompt_html') %></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td> <%= f.submit t('.submit'), class: "btn btn-success" %> </td>
+  </tr>
+</table>
 <% end %>
