--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -17,6 +17,7 @@
     <% @orders.each do |order| %>
       <tr>
         <td><%= order.name %></td>
+        <td><%= order.phone %></td>
         <td><%= order.address %></td>
         <td><%= order.email %></td>
         <td><%= order.pay_type %></td>
