--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -61,6 +61,7 @@
 #footer {
 	background: #fff;
 	padding: 10px;
+	margin-top: 50px;
 	border-bottom: 2px solid black;
 	font: small-caps 40px/40px "Times New Roman", serif;
 	color: black;
@@ -143,7 +144,7 @@
 			padding: 0.2em 1em;
 		}
 	}
-
+	/*
 	form {
 
 		label {
@@ -167,5 +168,6 @@
 			display: none;
 		}
 	}
+	*/
 
 }
