--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -6,7 +6,9 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Phone Number</th>
       <th>Address</th>
+      <th>Postal code</th>
       <th>Email</th>
       <th>Pay type</th>
       <th colspan="3"></th>
@@ -19,11 +21,12 @@
         <td><%= order.name %></td>
         <td><%= order.phone %></td>
         <td><%= order.address %></td>
+        <td><%= order.pos_code %></td>
         <td><%= order.email %></td>
         <td><%= order.pay_type %></td>
-        <td><%= link_to 'Show', order, class: "btn btn-info" %></td>
-        <td><%= link_to 'Edit', edit_order_path(order), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
+        <td><%= link_to 'Show', order, class: "btn btn-info btn-sm" %></td>
+        <td><%= link_to 'Edit', edit_order_path(order), class: "btn btn-warning btn-sm" %></td>
+        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" %></td>
       </tr>
     <% end %>
     <%= will_paginate %>
