--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,9 +14,9 @@
           </dl>       
         </td>
 
-        <td class="list_action"><%= link_to 'Show', product, class: "btn btn-info" %></td>
-        <td class="list_action"><%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning" %></td>
-        <td class="list_action"><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
+        <td class="list_action"><%= link_to 'Show', product, class: "btn btn-info btn-sm" %></td>
+        <td class="list_action"><%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning btn-sm" %></td>
+        <td class="list_action"><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" %></td>
         </td>
       </tr>
   <% end %>
