--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <% if notice %> 
   <p id="notice"><%= notice %></p>
 <% end %>
-<table class="table table-bordered">
+<table class="table table-stripped">
   <thead>
     <tr>
       <th>Name</th>
@@ -14,9 +14,9 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
-        <td><%= link_to 'Show', user, class: "btn btn-info" %></td>
-        <td><%= link_to 'Edit', edit_user_path(user), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
+        <td><%= link_to 'Show', user, class: "btn btn-info btn-sm" %> </td>
+        <td><%= link_to 'Edit', edit_user_path(user), class: "btn btn-warning btn-sm" %></td>
+        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" %></td>
       </tr>
     <% end %>
   </tbody>
