--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,54 +8,53 @@
 </head>
 <div class="container-fluid">
 <body class="<%= controller.controller_name %>">
-<div id="banner">
-	<%= form_tag store_path, class: 'locale' do %>
-		<%= select_tag 'set_locale', options_for_select(LANGUAGES, I18n.locale.to_s), onchange: 'this.form.submit()'%>
-		<%= submit_tag 'submit' %>
-		<%= javascript_tag "$('.locale input').hide()" %>
-	<% end %>
-	<%= image_tag("https://ecs7.tokopedia.net/img/cache/215/shops-1/2015/9/14/536289/536289_8b8d25f7-3456-4a7a-a2b3-77dc9d09e702.jpg") %>	
-	<h3><%= @page_title || t('.title') %></h3>
-	<div class="locale">
-		<% if current_user %>
-			<p><%= link_to "Logout", logout_path, method: :delete %></p>
-		<% else %>
-			<p><%= link_to "Login", login_path %> | <%= link_to "Signup", new_user_path %></p>
+	<div id="banner">
+		<%= form_tag store_path, class: 'locale' do %>
+			<%= select_tag 'set_locale', options_for_select(LANGUAGES, I18n.locale.to_s), onchange: 'this.form.submit()'%>
+			<%= submit_tag 'submit' %>
+			<%= javascript_tag "$('.locale input').hide()" %>
 		<% end %>
-	</div>
-</div>
-<div id="columns">
-	<div id="side">
-		<div id="cart">
-		<% if @cart %>
-		<% hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
-			<%= render @cart %>
-		<% end %>
-		<% end %>
+		<%= image_tag("https://ecs7.tokopedia.net/img/cache/215/shops-1/2015/9/14/536289/536289_8b8d25f7-3456-4a7a-a2b3-77dc9d09e702.jpg") %>	
+		<h3><%= @page_title || t('.title') %></h3>
+		<div class="locale">
+			<% if current_user %>
+				<p><%= link_to "Logout", logout_path, method: :delete %></p>
+			<% else %>
+				<p><%= link_to "Login", login_path %> | <%= link_to "Signup", new_user_path %></p>
+			<% end %>
 		</div>
-		<ul>
-		<li> <%= link_to t('.home'), store_path %> </li>
-		<% if session[:user_id] %>
-				<li> <%= link_to 'Orders', orders_path %> </li>
-				<li> <%= link_to 'Products', products_path %> </li>
-				<li> <%= link_to 'Users', users_path %> </li>
-				<li><hr></li>				
-		<% else %>
-			<li> <a href="#"> <%= t('.questions') %> </a> </li>
-			<li> <a href="#"> <%= t('.news') %> </a> </li>
-			<li> <a href="#"> <%= t('.contact') %> </a> </li>
-			<li><hr></li>
-		<% end %>
-		</ul>
 	</div>
-	<div id="main">
-		<%= yield %>
+	<div id="columns">
+		<div id="side">
+			<div id="cart">
+			<% if @cart %>
+			<% hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+				<%= render @cart %>
+			<% end %>
+			<% end %>
+			</div>
+			<ul>
+			<li> <%= link_to t('.home'), store_path %> </li>
+			<% if current_user && current_user.admin? %>
+					<li> <%= link_to 'Orders', orders_path %> </li>
+					<li> <%= link_to 'Products', products_path %> </li>
+					<li> <%= link_to 'Users', users_path %> </li>
+					<li><hr></li>				
+			<% else %>
+				<li> <a href="#"> <%= t('.questions') %> </a> </li>
+				<li> <a href="#"> <%= t('.news') %> </a> </li>
+				<li> <a href="#"> <%= t('.contact') %> </a> </li>
+				<li><hr></li>
+			<% end %>
+			</ul>
+		</div>
+		<div id="main">
+			<%= yield %>
+		</div>
 	</div>
-</div>
-<div id="footer">
-	<p>&copy; 2017</p>
-</div>
-
+	<div id="footer">
+		<p>&copy; 2017</p>
+	</div>
 </body>
 </div>
 </html>
