--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,9 +4,15 @@
 
     <%= f.input :name %>
 
+    <%= f.input :email %>
+
+    <%= f.input :phone %>
+
     <%= f.input :password, as: :password %>
 
     <%= f.input :password_confirmation, as: :password %> 
+
+    <%= f.input :gender, as: :radio_buttons, collection: ['Male','Female']%>
 
     <%= f.button :submit, 'Create Account',:class => "btn btn-success" %>
 
