--- a/app/views/order_notifier/received.html.erb
+++ b/app/views/order_notifier/received.html.erb
@@ -1,4 +1,4 @@
-<h1> Dear <%= (@order.name).titleize %> </h1>
+<h1> Dear <%= (@order.name).downcase.titleize %> </h1>
 
 <h2>Thank you for your recent order from AB OnlineShop!</h2>
 
