--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,8 +1,11 @@
 <% provide(:title, "Dashboard") %>
+<div class="text-center">
 <h1> Welcome <%= current_user.name %> </h1>
 <h2>It's <%= (Time.now).strftime("%A, %d %B %Y %I:%M%p") %></h2>
+
 <% if current_user && current_user.admin? %>
-	<h3>We have <stong style="color:red;"><%= pluralize(@total_order, 'Order') %></stong>.</h3>
+	<h3>We have <strong style="color:red;"><%= pluralize(@total_order, 'Order') %></strong>.</h3>
 <% else %>
 	<h3> Let's get shopping!</h3> <%= button_to "Shop now!", admin_path, class: "btn btn-danger" %>
 <% end %>
+</div>
