--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,7 +1,4 @@
-<% if notice %>
-	<p id="notice"><%= notice %></p>
-<% end %>
-<h3> Your Pragmatic Cart </h3>
+<h3> AB OnlineShop Cart </h3>
 <table>
 	<%= render @cart %>
 
