--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -3,7 +3,8 @@
 <% else %>
 <tr>
 <% end %>
-	<td> <%= line_item.quantity %>&times; </td>
+	<td> <%= line_item.quantity %></td>
+	<td>&times;</td>
 	<td> <%= (line_item.product.title).truncate_words(4) %> </td>
 	<td class="item_price"> Rp <%= number_with_delimiter(line_item.total_price) %> </td>
 </tr>
