--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,20 @@
 		<div class="container">			
 			<%= link_to "AB OnlineShop", store_path, id: "logo" %>
 			<nav>
+				<ul class="nav navbar-nav">
+					<li> <%= link_to t('.home'), store_path %> </li>
+					<% if current_user && current_user.admin? %>
+						<li> <%= link_to 'Orders', orders_path %> </li>
+						<li> <%= link_to 'Products', products_path %> </li>
+						<li> <%= link_to 'Users', users_path %> </li>
+						<li><hr></li>				
+					<% else %>
+						<li> <a href="#"> <%= t('.questions') %> </a> </li>
+						<li> <a href="#"> <%= t('.news') %> </a> </li>
+						<li> <a href="#"> <%= t('.contact') %> </a> </li>
+						<li><hr></li>
+					<% end %>
+				</ul>								
 				<ul class="nav navbar-nav navbar-right">					
 					<% if current_user %>
 						<li><%= link_to "Logout", logout_path, method: :delete %></li>
