--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,7 +1,5 @@
-$('#notice').hide();
-
 if ($('#cart tr').length == 1) { ('$cart').show('blind', 1000); }
 
 $('#cart').html("<%= escape_javascript render(@cart) %>");
 
-$('#current_item').css({'background-color': '#ff0011'}).animate({'background-color': '#fff'}, 1000);
+$('#current_item').css({'background-color': '#cc0000'}).animate({'background-color': '#fff'}, 1500);
