--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,24 +3,33 @@
 
 <table class="table table-bordered">
   <% @products.each do |product| %>
-      <tr class="<%= cycle('list_line_odd', 'list_line_even')%>">
-        <td> <%= image_tag(product.image_url, class: 'list_image') %></td>
+      <tr>
+        <td> <img src="<%= product.image_url %>" class="img-rounded" alt="Cinque Terre" width="50" height="50"></td>
         <td></td>
-        <td class="list_description">
+        <td>
           <dl>
             <dt> <%= product.title %> </dt>
             <dd> <%= (product.description).truncate_words(10) %> </dd>
           </dl>       
         </td>
 
-        <td class="list_action"><%= link_to 'Show', product, class: "btn btn-info btn-sm" %></td>
-        <td class="list_action"><%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning btn-sm" %></td>
-        <td class="list_action"><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" %></td>
+        <td>
+          <%= link_to product, class: "btn btn-info btn-sm" do %>
+            <i class="glyphicon glyphicon-eye-open"></i>
+          <% end %>            
+          </td>
+        <td>
+          <%= link_to edit_product_path(product), class: "btn btn-warning btn-sm" do %>
+            <i class="glyphicon glyphicon-pencil"></i>    
+          <% end %>
+        </td>
+        <td>
+          <%= link_to product, method: :delete,data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm"  do %>
+            <i class="glyphicon glyphicon-trash"></i>
+          <% end %>
         </td>
       </tr>
   <% end %>
 </table>
-
-<br>
 
 <%= link_to 'New Product', new_product_path, class: "btn btn-success" %>
