--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,22 +1,28 @@
-
-<p>
-  <strong>Title:</strong>
-  <%= @product.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
-
-<p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
+<table class="table table-stripped">
+	<tbody>
+		<tr>
+			<td>
+				<img src="<%= @product.image_url %>" class="img-rounded" alt="Cinque Terre" width="304" height="236"> 	
+			</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>Product Name</td>
+			<td><%= @product.title %></td>
+		</tr>
+		<tr>
+			<td>Image url</td>
+			<td><%= @product.image_url %></td>
+		</tr>
+		<tr>
+			<td>Price</td>
+			<td>Rp <%= number_with_delimiter(@product.price) %></td>
+		</tr>
+		<tr>
+			<td>Description</td>
+			<td><%= @product.description %></td>
+		</tr>
+	</tbody>
+</table>
 
 
