--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,8 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Email</th>
+      <th>Phone</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -10,9 +12,23 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
-        <td><%= link_to 'Show', user, class: "btn btn-info btn-sm" %> </td>
-        <td><%= link_to 'Edit', edit_user_path(user), class: "btn btn-warning btn-sm" %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" %></td>
+        <td><%= user.email %></td>
+        <td><%= user.phone %></td>
+        <td>
+          <%= link_to user, class: "btn btn-info btn-sm" do %> 
+            <i class="glyphicon glyphicon-eye-open"></i>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to edit_user_path(user), class: "btn btn-warning btn-sm" do %>
+            <i class="glyphicon glyphicon-pencil"></i>
+          <% end %>
+          </td>
+        <td>
+          <%= link_to user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" do %>
+              <i class="glyphicon glyphicon-trash"></i>
+            <% end %>
+          </td>
       </tr>
     <% end %>
   </tbody>
