--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,25 @@
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
+<table class="table table-stripped">
+	<tbody>
+		<tr>
+			<td>Name</td>
+			<td><%= @user.name %></td>
+		</tr>
+		<tr>
+			<td>Email</td>
+			<td><%= @user.email %></td>
+		</tr>
+		<tr>
+			<td>Phone</td>
+			<td><%= @user.phone %></td>
+		</tr>
+		<tr>
+			<td>Gender</td>
+			<td><%= @user.gender %></td>
+		</tr>
+		<tr>
+			<td>Admin Previlage</td>
+			<td><%= human_boolean(@user.admin) %></td>
+		</tr>
+	</tbody>
+</table>
 
