adding frieldy url method and bootstrap modal for cart

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,13 @@
 							<% end %>
 							</div>
 						</div><!-- end div of side-->
+						<ul class="list group nav nav-pills nav-stacked">
+						  <li role="presentation" class="list-group-item">
+						  	<a href="#">Mousepad <span class="label label-danger"></span></a>
+						  </li>
+						  <li role="presentation" class="list-group-item"><a href="#">Mouse</a></li>
+						  <li role="presentation" class="list-group-item"><a href="#">Keyboard</a></li>
+						</ul>
 					</aside>
 					<div class="col-sm-9">
 							<%= yield %>
