--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,18 +7,25 @@
 					<% if current_user && current_user.admin? %>
 						<li> <%= link_to 'Orders', orders_path %> </li>
 						<li> <%= link_to 'Products', products_path %> </li>
-						<li> <%= link_to 'Users', users_path %> </li>
-						<li><hr></li>				
+						<li> <%= link_to 'Users', users_path %> </li>				
 					<% else %>
 						<li> <a href="#"> <%= t('.questions') %> </a> </li>
 						<li> <a href="#"> <%= t('.news') %> </a> </li>
 						<li> <a href="#"> <%= t('.contact') %> </a> </li>
-						<li><hr></li>
 					<% end %>
 				</ul>								
-				<ul class="nav navbar-nav navbar-right">					
+				<ul class="nav navbar-nav navbar-right">
+					<% if @cart %>					
+						<li>
+							<a href="#" data-toggle="modal" data-target=".bd-example-modal-lg">
+								<b>My Cart<span class="badge"></span>
+								</b>
+							</a>
+						</li>
+					<% end %>
 					<% if current_user %>
 						<li><%= link_to "Logout", logout_path, method: :delete %></li>
+						<li><%=  %></li>
 					<% else %>
 						<li> <%= link_to "Login", login_path %> </li>
 						<li><%= link_to "Signup", new_user_path %></li>
@@ -34,3 +41,17 @@
 			</nav>			
 		</div>
 	</header>
+
+	<!-- modal target -->
+	<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+	  	<div class="modal-dialog modal-md">
+	  		<div class="modal-content">
+		      	<div class="modal-body">
+		        	<%= render @cart if @cart %>
+		      	</div>
+		      	<div class="modal-footer">
+		        	<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+		      	</div>
+	      	</div>
+	  	</div>
+	</div>
