--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -16,3 +16,22 @@
 		</tr>
 	</tbody>
 </table>
+
+<table class="table table-bordered">
+	<% @line_items.each do |line_item| %>
+	<tbody>
+		<tr>
+			<td>Quantity</td>
+			<td> <%= line_item.quantity %> </td>
+		</tr>
+		<tr>
+			<td>Product name </td>
+			<td> <%= line_item.product.title %> </td>
+		</tr>
+		<tr>
+			<td>Total </td>
+			<td><%= line_item.total_price %></td>
+		</tr>
+	</tbody>
+	<% end %>
+</table>
