--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,5 +1,5 @@
 	<h3> <%= t('.title')%> </h3>
-	<table class="table table-stripped">
+	<table class="table table-striped">
 		<%= render (@cart.line_items)%>
 
 
