--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,17 @@
 	<header class="navbar navbar-fixed-top">
-		<div class="container">			
+		<div class="container">
+
 			<%= link_to "AB OnlineShop", store_path, id: "logo" %>
 			<nav>
 				<ul class="nav navbar-nav">
 					<li> <%= link_to t('.home'), store_path %> </li>
-					<% if current_user && current_user.admin? %>
-						<li> <%= link_to 'Orders', orders_path %> </li>
-						<li> <%= link_to 'Products', products_path %> </li>
-						<li> <%= link_to 'Users', users_path %> </li>				
+					<% if current_user %>
+						<% if current_user.admin? %>
+							<li> <%= link_to 'Orders', orders_path %> </li>
+							<li> <%= link_to 'Products', products_path %> </li>
+							<li> <%= link_to 'All Users', users_path %> </li>
+						<% end %>
+						<li> <%= link_to "Profile", user_path(current_user) %> </li>				
 					<% else %>
 						<li> <a href="#"> <%= t('.questions') %> </a> </li>
 						<li> <a href="#"> <%= t('.news') %> </a> </li>
@@ -15,14 +19,14 @@
 					<% end %>
 				</ul>								
 				<ul class="nav navbar-nav navbar-right">
-					<% if @cart %>					
+					<% if @cart %>
 						<li>
 							<a href="#" data-toggle="modal" data-target=".bd-example-modal-lg">
 								<b>My Cart<span class="badge"></span>
 								</b>
 							</a>
 						</li>
-					<% end %>
+					<% end %>						
 					<% if current_user %>
 						<li><%= link_to "Logout", logout_path, method: :delete %></li>
 						<li><%=  %></li>
