--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,23 +4,19 @@
 			<td>
 				<img src="<%= @product.image_url %>" class="img-rounded" alt="Cinque Terre" width="304" height="236"> 	
 			</td>
-			<td></td>
+			<td>
+				<h3>
+					<span class="label label-success">
+					Rp <%= number_with_delimiter(@product.price) %>
+				</span>
+				</h3>
+			</td>
 		</tr>
 		<tr>
-			<td>Product Name</td>
-			<td><%= @product.title %></td>
+			<td colspan="2"><h3><%= @product.title %></h3></td>
 		</tr>
 		<tr>
-			<td>Image url</td>
-			<td><%= @product.image_url %></td>
-		</tr>
-		<tr>
-			<td>Price</td>
-			<td>Rp <%= number_with_delimiter(@product.price) %></td>
-		</tr>
-		<tr>
-			<td>Description</td>
-			<td><%= @product.description %></td>
+			<td colspan="2"><%= simple_format(@product.description) %></td>
 		</tr>
 	</tbody>
 </table>
