--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -8,7 +8,7 @@
 				<h3><%= link_to product.title, product_path(product) %></h3>
 				<div class="price_line">
 					<span class="price"> Rp <%= number_with_delimiter(product.price) %> </span>
-					<%= button_to t('.add_html'), line_items_path(product_id: product), remote: true, class: "btn btn-success" %>
+					<%= button_to t('.add_html'), line_items_path(product_id: product), remote: true, class: "btn btn-danger" %>
 				</div>
 			</div>
 		<% end %>
