--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<h3>My Profile</h3>
 <table class="table table-stripped">
 	<tbody>
 		<tr>
@@ -16,10 +17,39 @@
 			<td>Gender</td>
 			<td><%= @user.gender %></td>
 		</tr>
-		<tr>
-			<td>Admin Previlage</td>
-			<td><%= human_boolean(@user.admin) %></td>
-		</tr>
 	</tbody>
 </table>
-
+<% if @orders.any? %>
+	<h3>Order History</h3>
+	<table class="table table-bordered">
+		<% @orders.each do |order| %>
+		<thead>
+			<tr class="success">
+				<td colspan="2"><b> Order number</b> <span class="label label-success"><%= order.id %></span> </td>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Name</td>
+				<td><%= order.name %></td>
+			</tr>
+				<tr>
+				<td>Address</td>
+				<td><%= order.address %></td>
+			</tr>
+				<tr>
+				<td>Email</td>
+				<td><%= order.email %></td>
+			</tr>
+				<tr>
+				<td>Payment Type</td>
+				<td><%= order.pay_type %></td>
+			</tr>
+				<tr>
+				<td>Order Date</td>
+				<td><%= (order.created_at).strftime("%A, %d %B %Y %I:%M%p") %></td>
+			</tr>
+		</tbody>
+		<% end %>
+	</table>
+<% end %>
