adding new link in bottom

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,7 +15,7 @@
 	</small>
 	<ul>
 		<li> <%= link_to t('.questions'), question_path %>  </li>
-		<li> <a href="#"> <%= t('.news') %> </a> </li>
+		<li> <%= link_to t('.news'), news_path %> </a> </li>
 		<li> <a href="#"> <%= t('.contact') %> </a> </li>
 	</ul>
 </footer>
