--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
 					<% else %>
 						<li>  <%= link_to t('.questions'), question_path %> </li>
 						<li>  <%= link_to t('.news'), news_path %> </li>
-						<li> <a href="#"> <%= t('.contact') %> </a> </li>
+						<li>  <%= link_to t('.contact'), "#" %> </a> </li>
 					<% end %>
 				</ul>								
 				<ul class="nav navbar-nav navbar-right">
