fixing layouts aside

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,10 @@
 						</div><!-- end div of side-->
 
 						<ul class="list group">
-							<li><a href="#" class="list-group-item disabled">Product Category</a></li>
-						  	<li><a href="#" class="list-group-item">Mousepad</a></li>
-						  	<li><a href="#" class="list-group-item">Mouse</a></li>
-						  	<li><a href="#" class="list-group-item">Keyboard</a></li>
+							<li class="list-group-item disabled"><b>Product Category</b></li>
+						  	<li class="list-group-item"><a href="#">Mousepad</a></li>
+						  	<li class="list-group-item"><a href="#">Mouse</a></li>
+						  	<li class="list-group-item"><a href="#">Keyboard</a></li>
 						</ul>
 
 					</aside>
