--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-
+<% provide(:title, "Product") %>
 <table class="table table-bordered">
   <% @products.each do |product| %>
       <tr>
