--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,11 +1,13 @@
 	<h3> <%= t('.title')%> </h3>
 	<table class="table table-striped">
 		<%= render (@cart.line_items)%>
-
-
+		<tr>
+			<td colspan="3">Go Jek shipping cost</td>
+			<td>Rp 15.000</td>
+		</tr>
 		<tr class="total_line">
 			<td colspan="3"> Total </td>
-			<td class="total_cell">Rp <%= number_with_delimiter(@cart.total_price) %> </td>		
+			<td class="total_cell">Rp <%= number_with_delimiter(@cart.total_price_with_go_jek_cost) %> </td>		
 		</tr>
 		
 	</table>
