--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
 			<div class="row">
 				<div id="columns">
 					<aside class="col-sm-3">
+						
+						
 						<div id="side">
 							<div id="cart">
 							<% if @cart %>
@@ -30,7 +32,8 @@
 								<% end %>
 							<% end %>
 							</div>
-						</div><!-- end div of side-->
+						</div> 
+						
 
 						<ul class="list group">
 							<li class="list-group-item disabled"><b>Product Category</b></li>
