--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -4,3 +4,7 @@ if ($('#cart tr').length == 1) { ('$cart').show('blind', 1000); }
 $('#cart').html("<%= escape_javascript render(@cart) %>");
 
 $('#current_item').css({'background-color': '#cc0000'}).animate({'background-color': '#fff'}, 1500);
+
+$('#cart-badge').html("<%= cart_quantity(@cart.line_items)%>");
+
+$('#cart-body').html("<%= escape_javascript render(@cart) %>");
