--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -7,9 +7,14 @@
 		</tr>
 		<tr class="total_line">
 			<td colspan="3"><b> Total </b></td>
-			<td class="total_cell" colspan="2"><b>Rp <%= number_with_delimiter(@cart.total_price_with_go_jek_cost) %> </b></td>		
+			<td class="total_cell" colspan="2">
+				<b>
+					Rp <%= number_with_delimiter(grand_total_price_with_go_jek_cost(@cart.line_items)) %> 
+				</b>
+			</td>		
 		</tr>
 		
 	</table>
-	<%= button_to t('.checkout'), new_order_path, method: :get, class: "btn btn-danger" %><hr/>
+	<%= button_to t('.checkout'), new_order_path, method: :get, class: "btn btn-danger" %>
+	<hr/>
 	<%= button_to t('.empty'), @cart, method: :delete, data: { confim: "Are you sure?" } %>
